# lot-management-system

./: -w  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FORECAST_TEST_DATA_INVESTIGATION.md  GEMINI_TASK.md  HOTFIX_PHASE1.md  IMPROVEMENT_CHECKLIST.md  Lot-management-system-15-20-49.txt  Makefile  PROJECT_REVIEW_REPORT.md  PROMPT_FOR_GEMINI.md  README.md  RENAME_MAPPING.md  SCHEMA_FIX_REPORT.md  SETUP_GUIDE.md  TEST_CREATION_SUMMARY.md  TEST_DB_USAGE.md  TEST_EXECUTION_RESULTS.md  audit_schema.py  debug_create_views.py  debug_sql_split.py  docker-compose.test.yml  docker-compose.yml  export_order_register_rows.py  fix_view.sql  fix_view_production.sql  lint_output.txt  mypy_errors.txt  mypy_errors_2.txt  mypy_final.txt  package-lock.json  package.json  permission_test_result.txt  pr_body.txt  pr_description.txt  recreate_views_via_python.py  reset_db_result.txt  (+7 more)
backend/: .coveragerc  .env.example  .env.production.example  .gitignore  Dockerfile  PHASE1_VIEW_FIX_GUIDE.md  PRODUCTION_VIEW_FIX.md  README.md  VIEW_FIX_README.md  alembic.ini  apply_views_v2_5.sql  audit_schema.py  check_and_fix_view.py  check_env.py  debug_lot.py  dump_view_definition.py  fix_phase1_production.py  fix_supplier_part_numbers.py  fix_view_direct.sql  generate_openapi.py  lot-management.service.example  lot_management_schema_v2.sql  mypy.ini  openapi.json  openapi_diff_check.py  pyproject.toml  pytest.ini  recreate_inventory_views.sql  requirements.txt  reset_test_db.py  rpa_test_debug.txt  seed_shipping_master_dummy.py  seed_smartread_dummy.py  start_production.sh  table_data_sample.sql  table_schemas.sql  test_sap_data.py  verify_bulk_export.py  verify_db_schema.py  verify_imports.py  (+5 more)
backend/.hypothesis/constants/: 01fe9f6e2de74ea4  07e84d9b3c7a0421  08b196881046ff5c  1550391b7614d31a  1645bdb816f72a74  474204d811c89543  54dc7452aaf7734c  6bfe794a0e6754b5  757d0dbc286bb7e0  7b6b72a5386596ed  7d752d9ebab9a1f3  7fb0c60128b1e971  81b013ce0e83d87e  8ecbb05c6ee9f9df  9ec92b49b5e0bd70  a464d5d8790a9d97  bae85fc4d0732523  bde2e9f8b8933297  be55d57f666a326b  d69df988d2c0f85a  d6b8c6282c66011a  eb6654788a2c9793  f6313f7ee0c1d10d  f932309585212d47
backend/alembic/: baseline_2026_01_27.sql  baseline_2026_02_06.sql  env.py  sql_utils.py
backend/alembic/archive/: 17625625c5fb_add_customer_part_no_and_maker_item_.py  2a9b62dd46a0_add_reserved_quantity_active_to_v_lot_.py  58a60869c7e1_add_rpa_run_date_range.py  6ea7f2902c6a_merge_heads_for_zod_upgrade.py  b3_lot_receipts_rename.py  b7c8d9e0f1g2_update_rpa_runs_status_constraint.py  bd41467bfaf6_p2_schema_improvements_safe_updates.py  e1f2g3h4i5j6_add_rpa_run_tables.py  f1e2d3c4b5a6_refresh_views.py  fb04bac1471c_merge_heads.py  g2h3i4j5k6l7_add_step3_step4_columns.py  i4j5k6l7m8n9_add_customer_id_rename_rpa_columns.py  m1n2o3p4q5r6_add_warehouse_delivery_routes.py  w1x2y3z4a5b6_add_withdrawal_cancellation_fields.py
backend/alembic/baselines/: baseline_schema_20260119.sql
backend/alembic/sql/: add_table_column_comments.sql
backend/alembic/temp_archive/: h2i3j4k5l6m7_remove_customer_items_ocr_sap_fields.py  j4k5l6m7n8o9_phase1_maker_part_no_not_null.py
backend/alembic/versions/: 000000000000_initial_schema.py  0085f02d2f77_add_display_name_and_update_uniqueness_.py  0b86a5a7236d_rename_order_lines_external_product_.py  121128300ac0_baseline_v2_5_schema.py  1234567890ab_add_lot_master_aggregation_trigger.py  123456789abc_expand_forecast_period_in_allocation_suggestions.py  18dcee2f69a3_add_user_supplier_assignments.py  19cf5314f970_schema_improvements_version_and_views.py  1fc6aeb192f2_remove_order_number_from_orders.py  20241209_add_customer_item_delivery_settings.py  20241209_add_withdrawals.py  20241209_change_origin_type_default.py  20241210_add_lot_reservations.py  20241210_complete_migration.py  20241211_soft_delete_views_update.py  20241213_add_temporary_lot_key.py  20241213_allocations_lot_id.py  2025112208ac01_add_v2_5_views.py  24ab8ce1395d_rename_rpa_status_values.py  271b5b7afd1d_add_delivery_date_to_ocr_edits.py  29360a34fdee_add_product_warehouse_table.py  2d9f9a0b6b1c_add_order_no_to_lot_master.py  3a0f933dd9bc_add_coa_issue_date_to_allocation_.py  3b2e9d3f0a1c_add_master_versions.py  3bf031f4ed27_add_product_suppliers_table.py  3ee7b8597d75_add_cancel_reason_column_to_orders.py  (+139 more)
backend/app/: check_batch_race.py  check_codex_fixes.py  check_expiry_confirm.py  check_logic_unification.py  check_performance.py  check_sap_failure.py  check_state_transitions.py  inspect_db.py  main.py  openapi.json
backend/backups/: README.md
backend/scripts/: apply_views.py  check_batch_race.py  check_codex_fixes.py  check_expiry_confirm.py  check_jiku_data.py  check_logic_unification.py  check_performance.py  check_sap_failure.py  check_sap_keys.py  check_schema_consistency.py  check_state_transitions.py  create_admin.py  export_openapi.py  fix_data_integrity.py  generate_excel_view_data.py  generate_openapi.py  generate_test_data.py  generate_test_inventory.py  init_db.py  init_db.sh  list_tables.py  migrate_allocation_table.py  migrate_allocations_to_reservations.py  model_schema_dump.py  openapi_diff_check.py  run_api_smoke.py  seed_jiku_pattern_test_data.py  stamp_baseline.py  test_ocr_export_logic.py  update_inventory_view.py  verify_data_gen.py  verify_prefill_dev.py  verify_unit_conversion.py  verify_uom_conversion.py
backend/seeds/: lots_stage.csv  order_headers.csv  order_lines.csv  products.csv  suppliers.csv  warehouses.csv
backend/sql/: init_system_users.sql  schema_latest.sql
backend/tests/: README.md  conftest.py  conftest_hypothesis.py  db_utils.py  init_test_db.py  test_allocation_suggestions_v2.py  test_allocations_refactored.py  test_app_layer_fixes.py  test_auth.py  test_data_spec.md  test_health.py  test_order_allocation_refactor.py  test_order_auto_allocation.py  test_orders_refactored.py  test_p3_allocations_freeze.py  test_routes_registered.py  test_smartread_service.py  test_validation.py
backend/tools/: check_db_schema.py
backend/views/: create_views.sql  v_inventory_summary.sql
(+2824 files in other folders)
